# majordomo

./: .gitignore  CMakeLists.txt
builds/msvc/vs2015/: majordomo.sln
builds/msvc/vs2015/mdp_broker/: mdp_broker.vcxproj  mdp_broker.vcxproj.filters
builds/msvc/vs2015/mdp_client/: mdp_client.vcxproj  mdp_client.vcxproj.filters
builds/msvc/vs2015/mdp_worker/: mdp_worker.vcxproj  mdp_worker.vcxproj.filters
src/: mdp_msg.c
